--- a/package.json
+++ b/package.json
@@ -1,30 +1,42 @@
 {
-  "name": "template",
+  "name": "acme-schools",
   "version": "1.0.0",
   "description": "",
   "main": "server/server.js",
   "scripts": {
+    "test": "DATABASE_URL=postgres://localhost/acme_schools_test nodemon ./node_modules/mocha/bin/mocha",
     "postinstall": "npm run webpack",
     "webpack": "webpack",
     "build": "npm run webpack -- --watch --mode=development",
     "start:dev": "npm run build & DATABASE_URL=postgres://localhost/acme_schools_dev nodemon server/server.js --ignore dist --ignore src"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Andrew",
+  "license": "MIT",
   "babel": {
     "presets": [
-      "react"
+      "react",
+      "env",
+      "stage-3"
+    ],
+    "plugins": [
+      "transform-object-rest-spread"
     ]
   },
   "dependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
     "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "body-parser": "^1.18.3",
+    "chai": "^4.2.0",
     "express": "^4.16.3",
-    "faker": "^4.1.0",
+    "mocha": "^5.2.0",
     "pg": "^7.4.3",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
