--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "postinstall": "npm run webpack",
     "webpack": "webpack",
     "build": "npm run webpack -- --watch --mode=development",
-    "start:dev": "npm run build & DATABASE_URL=postgres://localhost/acme_schools_dev nodemon server/server.js --ignore dist --ignore src"
+    "start:dev": "npm run build & DATABASE_URL=postgres://localhost/acme_schools_dev nodemon server/server.js --ignore dist --ignore src",
+    "start": "node server/server.js"
   },
   "keywords": [],
   "author": "Andrew",
